$Id$

Revision history for Perl extension POE.
========================================

Changes marked with "(!!!)" may break backward compatibility.
Versions with "_xx" subversions are internal test releases.


0.0702 1999.07.??
-----------------

Made BindAddress optional for UNIX client sockets.  It's still
required for server sockets.


0.0701 1999.07.01
-----------------

Fixed a race or TCP/IP stack problem in SocketFactory.  SocketFactory
was firing a "connect error 0" if the server side sent data
immediately.  The problem was tested on four systems: Linux (broke);
Solaris (broke); FreeBSD (worked); OS/2 (worked).  Go figure.  It
should work on all four now.

Modified POE::Filter::HTTPD to respond with the protocol version
(hardcoded to 1.0).  The wget utility had a problem with 'HTTP ...',
and I assume it won't be the only thing to.

Replaced a regular expression in POE::Filter::Reference with a
substr() call.  The regexp was used to frame input streams, and large
structures (over 32KB) were not being framed correctly.  This was
fixed in a previous version, but the fix was reverted for some reason.
The new &get method code also supports 0-byte blocks, which is
pointless for a Reference filter, but lets you use Reference as a
"reference" for other variable-length block filters. :)


0.07 1999.06.18 (!!!)
---------------------

Revised the new manpages based on reader feedback.

Bumped the version number to 0.07 and released it to the CPAN.  This
version contains all the changes, including one minor interface
change.  It's that change that warrants the (!!!) icon, so don't
panic.  This is NOT another 0.05 -> 0.06 API changefest of pain.


0.0609 1999.06.15 (!!!)
-----------------------

Updated samples/*sessions.perl to test $kernel->state(...) and
discovered that the documentation was wrong about this function.
Thanks, Artur, for pointing this out.

Fixed the documentation for $kernel->state(...) with regards to
package and object sessions.
